@@ -84,9 +84,9 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.2</version>
+                <version>${maven-surefire-plugin}</version>
                 <configuration>
-                    <argLine>--enable-preview</argLine>
+                    <argLine>-XX:+EnableDynamicAgentLoading --enable-preview</argLine>
                     <includes>
                         <include>*/Test.java</include>
                         <include>/*Test.java</include>
